Added user-directive, -controller, -resource.

--- a/grails-app/assets/javascripts/angular-app/app/templates/customer.tpl.htm
+++ b/grails-app/assets/javascripts/angular-app/app/templates/customer.tpl.htm
@@ -1,4 +1,9 @@
 <div class="row">
+    <div class="row">
+    <div username></div>
+    <hr>
+</div>
+
     <form class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-2 control-label" for="firstname">Firstname</label>
@@ -37,7 +42,7 @@
 
             <div class="col-sm-2">
                     <textarea class="form-control form-control-lg" id="address" name="address"
-                              data-ng-model="customer.phone"></textarea>
+                              data-ng-model="customer.address"></textarea>
             </div>
         </div>
 
