Moved angular-markdown-editor and added notifications-Service.

--- a/grails-app/assets/javascripts/angular-app/app/templates/customer.tpl.htm
+++ b/grails-app/assets/javascripts/angular-app/app/templates/customer.tpl.htm
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="row">
-    <div username></div>
+        <div class="col-sm-8" username></div>
+        <div class="col-sm-4" ng-include="'notification.htm'"></div>
+    </div>
     <hr>
-</div>
-
     <form class="form-horizontal">
         <div class="form-group">
             <label class="col-sm-2 control-label" for="firstname">Firstname</label>
@@ -48,6 +48,5 @@
 
         <hr>
         <div edit-buttons></div>
-
     </form>
 </div>
