--- a/grails-app/assets/javascripts/angular-app/app/templates/username.tpl.htm
+++ b/grails-app/assets/javascripts/angular-app/app/templates/username.tpl.htm
@@ -1,6 +1,1 @@
-<form class="form-horizontal">
-    <div class="form-group">
-        <label class="control-label" for="username">User:</label>
-        <label class="control-label" id="username">{{username}}</label>
-    </div>
-</form>
+<div>Logged in as: <strong>{{username}}</strong></div>
